feat: tailwindcss V4版本使用theme 添加tailwindcss config

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,11 @@
+@config "../tailwind.config.js";
 @import "tailwindcss";
+
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --bg-test: #0382E0;
 }
 
 @theme inline {
@@ -12,11 +15,15 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+} */
+
+@theme {
+  --color-blue:  #inline;
 }
 
 body {
