--- a/app/globals.css
+++ b/app/globals.css
@@ -137,7 +137,7 @@
   }
 
   body {
-    @apply bg-background text-foreground flex flex-col min-h-screen;
+    @apply bg-9 text-foreground flex flex-col min-h-screen;
   }
 
   * {
