--- a/app/globals.css
+++ b/app/globals.css
@@ -13,14 +13,19 @@
   --card-foreground: oklch(0.129 0.042 264.695);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.129 0.042 264.695);
-  --primary: oklch(0.208 0.042 265.755);
+  /* active */
+  --primary: #fff;
   --primary-foreground: oklch(0.984 0.003 247.858);
   --secondary: oklch(0.968 0.007 247.896);
   --secondary-foreground: oklch(0.208 0.042 265.755);
   --muted: oklch(0.968 0.007 247.896);
-  --muted-foreground: oklch(0.554 0.046 257.417);
+  --muted-foreground: #1C1E87;
+  --muted-foreground-1: oklch(0.554 0.046 257.417);
   --accent: #BCE5FF;
   --accent-foreground: oklch(0.208 0.042 265.755);
+
+  --accent: #1C1E8CBB;
+  --accent-foreground: #fff;
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.929 0.013 255.508);
   --input: oklch(0.929 0.013 255.508);
@@ -83,15 +88,6 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
-
-
 @theme {
   --color-blue:  #inline;
 }
@@ -152,10 +148,35 @@
   @apply font-[family-name:var(--font-Recursive)] leading-9 md:leading-13 pl-4 pr-10 rounded-b-lg md:pl-8 md:pr-24 font-semibold md:text-[24px]
 }
 
+.section-title {
+  @apply uppercase mb-[20px] font-semibold  text-[28px] md:text-[48px] text-3
+}
+
+.rounded3 {
+  @apply rounded-tl-[20px] rounded-tr-[20px] rounded-br-[20px] 
+}
+
 .custom-bg {
   background-image: radial-gradient(transparent 1px, #fff 1px);
   background-size: 4px 4px;
   backdrop-filter: saturate(50%) blur(4px);
   --bg-color: transparent; /* 可根据需要修改为你的主题色 */
   border-bottom: 1px solid var(--border-color);
+}
+
+
+.filter-bottom-half {
+  position: relative;
+  overflow: hidden;
+}
+
+.filter-bottom-half::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60%; /* 只影响下半部分 */
+  background: linear-gradient(to top, #1C1E8CBB ,  transparent) no-repeat padding-box;
+  /* background: linear-gradient(180deg,rgba(170, 25, 25, 0) 0,#1C1E8C 100%) no-repeat padding-box; */
 }
